--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "eslint:fix": "yarn eslint --fix src --ext .ts"
+    "eslint:fix": "yarn eslint --fix src --ext .ts",
+    "test": "jest",
+    "dev": "ts-node src/app.ts"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
@@ -18,10 +20,12 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   },
   "dependencies": {
     "@types/express": "^4.17.11",
+    "csv-parse": "^4.15.1",
     "express": "^4.17.1",
     "mongoose": "^5.11.15"
   }
