--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "ts-node src/app.ts"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
     "@types/jest": "^26.0.20",
     "@types/mongoose": "^5.10.3",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.11",
     "csv-parse": "^4.15.1",
     "express": "^4.17.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "ts-node": "^9.1.1"
   }
 }
